<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/notarizations_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            app:layout_scrollFlags="scroll|enterAlways" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="33dp"

            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/todo_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_do_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/inprogress_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/done_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done_tab" />

        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.notarization.NotarizationsActivity" />
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/simpleFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>